--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* index.css */
+.containervideo {
+  @apply flex bg-white overflow-hidden flex-wrap h-auto p-4 mb-8 rounded-lg justify-between w-full md:w-[30%];
+}
